구글차트 겁나 짜증난다다다다다다다다다

--- a/src/main/webapp/resources/css/sb-admin.css
+++ b/src/main/webapp/resources/css/sb-admin.css
@@ -225,3 +225,11 @@ ul.alert-dropdown {
 .panel-yellow > a:hover {
     color: #df8a13;
 }
+
+.data{
+	border: none;
+	margin: 0px;
+	padding: 0px;
+	width: 0px;
+	height: 0px;
+}
